--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
                 <input type="text" id="tal">
                 <h1>PERCENTAGE</h1>
                 <input type="text" id="per">
+                <span id="pass" class="pass"> pass</span>
+                <span id="fail" class="fail"> fail</span>
                 
-                    <input type="button" value="submit"  id="btn" onclick="shw()">
+                    <input type="button" value="submit"  id="btn"   onclick="shw()">
 
             </div>
         </div>
